--- a/.lfrc
+++ b/.lfrc
@@ -33,29 +33,29 @@ set cleaner ctpvclear
 # cmds/functions
 # cmd open ${{
 #     case $(file --mime-type "$(readlink -f $f)" -b) in
-# # 	application/vnd.openxmlformats-officedocument.spreadsheetml.sheet) localc $fx ;;
-# # 	image/vnd.djvu|application/pdf|application/octet-stream|application/postscript) setsid -f zathura $fx >/dev/null 2>&1 ;;
+# 	application/vnd.openxmlformats-officedocument.spreadsheetml.sheet) localc $fx ;;
+# 	# image/vnd.djvu|application/pdf|application/octet-stream|application/postscript) setsid -f zathura $fx >/dev/null 2>&1 ;;
 #         text/*|application/json|inode/x-empty) $EDITOR $fx;;
-# # 	image/x-xcf) setsid -f gimp $f >/dev/null 2>&1 ;;
-# # 	image/svg+xml) display -- $f ;;
-# 	# image/*) rotdir $f | grep -i "\.\(png\|jpg\|jpeg\|gif\|webp\|tif\|ico\)\(_large\)*$" |
-# 	# 	setsid -f sxiv -aio 2>/dev/null | while read -r file; do
-# 	# 		[ -z "$file" ] && continue
-# 	# 		lf -remote "send select \"$file\""
-# 	# 		lf -remote "send toggle"
-# 	# 	done &
-# 	# 	;;
+# 	image/x-xcf) setsid -f gimp $f >/dev/null 2>&1 ;;
+# 	image/svg+xml) display -- $f ;;
+# 	image/*) rotdir $f | grep -i "\.\(png\|jpg\|jpeg\|gif\|webp\|tif\|ico\)\(_large\)*$" |
+# 		setsid -f sxiv -aio 2>/dev/null | while read -r file; do
+# 			[ -z "$file" ] && continue
+# 			lf -remote "send select \"$file\""
+# 			lf -remote "send toggle"
+# 		done &
+# 		;;
 # 	audio/*) mpv --audio-display=no $f ;;
 # 	video/*) setsid -f mpv $f -quiet >/dev/null 2>&1 ;;
-# # 	application/pdf|application/vnd*|application/epub*) setsid -f zathura $fx >/dev/null 2>&1 ;;
+# 	# application/pdf|application/vnd*|application/epub*) setsid -f zathura $fx >/dev/null 2>&1 ;;
 # 	application/pgp-encrypted) $EDITOR $fx ;;
-# # 	application/vnd.openxmlformats-officedocument.wordprocessingml.document|application/vnd.oasis.opendocument.text) setsid -f lowriter $fx >/dev/null 2>&1 ;;
-# # 	application/vnd.openxmlformats-officedocument.spreadsheetml.sheet|application/octet-stream|application/vnd.oasis.opendocument.spreadsheet|application/vnd.oasis.opendocument.spreadsheet-template) setsid -f localc $fx >/dev/null 2>&1 ;;
-# # 	application/vnd.openxmlformats-officedocument.presentationml.presentation|application/vnd.oasis.opendocument.presentation-template|application/vnd.oasis.opendocument.presentation|application/vnd.ms-powerpoint) setsid -f loimpress $fx >/dev/null 2>&1 ;;
-# # 	application/vnd.oasis.opendocument.graphics|application/vnd.oasis.opendocument.graphics-template) setsid -f lodraw $fx >/dev/null 2>&1 ;;
-# # 	application/vnd.oasis.opendocument.formula) setsid -f lomath $fx >/dev/null 2>&1 ;;
-# # 	application/vnd.oasis.opendocument.database) setsid -f lobase $fx >/dev/null 2>&1 ;;
-# #         *) for f in $fx; do setsid -f $OPENER $f >/dev/null 2>&1; done;;
+# 	application/vnd.openxmlformats-officedocument.wordprocessingml.document|application/vnd.oasis.opendocument.text) setsid -f lowriter $fx >/dev/null 2>&1 ;;
+# 	application/vnd.openxmlformats-officedocument.spreadsheetml.sheet|application/octet-stream|application/vnd.oasis.opendocument.spreadsheet|application/vnd.oasis.opendocument.spreadsheet-template) setsid -f localc $fx >/dev/null 2>&1 ;;
+# 	application/vnd.openxmlformats-officedocument.presentationml.presentation|application/vnd.oasis.opendocument.presentation-template|application/vnd.oasis.opendocument.presentation|application/vnd.ms-powerpoint) setsid -f loimpress $fx >/dev/null 2>&1 ;;
+# 	application/vnd.oasis.opendocument.graphics|application/vnd.oasis.opendocument.graphics-template) setsid -f lodraw $fx >/dev/null 2>&1 ;;
+# 	application/vnd.oasis.opendocument.formula) setsid -f lomath $fx >/dev/null 2>&1 ;;
+# 	application/vnd.oasis.opendocument.database) setsid -f lobase $fx >/dev/null 2>&1 ;;
+#         *) for f in $fx; do setsid -f $OPENER $f >/dev/null 2>&1; done;;
 #     esac
 # }}
 
@@ -101,6 +101,24 @@ cmd copyto ${{
 	notify-send "📋 File(s) copied." "File(s) copies to $dest."
 }}
 
+cmd convert2mov ${{
+	clear; tput cup $(($(tput lines)/3)); tput bold
+	set -f
+	printf "%s\n\t" "$fx"
+	printf "upscale?[y/N]"
+	read ans
+	[ $ans = "y" ] && st -e 2mov $fx &
+}}
+
+cmd upscale4thumbnail ${{
+	clear; tput cup $(($(tput lines)/3)); tput bold
+	set -f
+	printf "%s\n\t" "$fx"
+	printf "convert to mov?[y/N]"
+	read ans
+	[ $ans = "y" ] && st -e res4thum $fx &
+}}
+
 cmd setbg "$1"
 cmd bulkrename $vidir
 
@@ -133,11 +151,14 @@ map b $setbg $f
 
 map <c-e> down
 map <c-y> up
-# map V push :!nvim<space>
+map V push :!nvim<space>
 
 map W $setsid -f $TERMINAL >/dev/null 2>&1
 
 map Y $printf "%s" "$fx" | xclip -selection clipboard
+
+map m convert2mov
+map u upscale4thumbnail
 
 # Source Bookmarks
 # source "~/.local/share/alias/aliases"
