--- a/.local/share/applications/wine-extension-ini.desktop
+++ b/.local/share/applications/wine-extension-ini.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Name=notepad
 MimeType=application/x-wine-extension-ini;
-Exec=env WINEPREFIX="/usr/local/games/Bioshock.Remastered/game/prefix" wine start /ProgIDOpen inifile %f
+Exec=env WINEPREFIX="/home/james/.local/share/jc141/wine/prefix" wine start /ProgIDOpen inifile %f
 NoDisplay=true
 StartupNotify=true
 Icon=2E40_notepad.0
