--- a/.local/share/applications/wine-extension-vbs.desktop
+++ b/.local/share/applications/wine-extension-vbs.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Name=wscript
 MimeType=text/vbscript;
-Exec=env WINEPREFIX="/usr/local/games/Bioshock.Remastered/game/prefix" wine start /ProgIDOpen VBSFile %f
+Exec=env WINEPREFIX="/home/james/.local/share/jc141/wine/prefix" wine start /ProgIDOpen VBSFile %f
 NoDisplay=true
 StartupNotify=true
 Icon=2905_wscript.0
