--- a/.lfrc
+++ b/.lfrc
@@ -125,7 +125,7 @@ cmd bulkrename $vidir
 # Bindings
 map <c-f> $lf -remote "send $id select \"$(fzfp)\""
 map J $lf -remote "send $id cd $(sed -e 's/\s*#.*//' -e '/^$/d' -e 's/^\S*\s*//' ${XDG_CONFIG_HOME:-$HOME/.config}/shell/bm-dirs | fzfp)"
-map gh
+# map gh
 map g top
 map D delete
 map E extract
@@ -133,7 +133,6 @@ map C copyto
 map M moveto
 map <c-n> push :mkdir<space>
 map <c-r> reload
-# map <c-s> set hidden!
 map . set hidden!
 map <enter> shell
 map x $$f
@@ -142,7 +141,7 @@ map o &mimeopen $f
 map O $mimeopen --ask $f
 
 map A rename # at the very end
-map c push A<c-u> # new rename
+map n push A<c-u> # new rename
 map I push A<c-a> # at the very beginning
 map i push A<a-b><a-b><a-f> # before extension
 map a push A<a-b> # after extension
@@ -159,6 +158,7 @@ map Y $printf "%s" "$fx" | xclip -selection clipboard
 
 map m convert2mov
 map u upscale4thumbnail
+map c push :cd<space>
 
 # Source Bookmarks
 # source "~/.local/share/alias/aliases"
