--- a/.local/share/applications/wine-extension-hlp.desktop
+++ b/.local/share/applications/wine-extension-hlp.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Name=winhlp32
 MimeType=application/winhlp;
-Exec=env WINEPREFIX="/home/james/.local/share/jc141/wine/prefix" wine start /ProgIDOpen hlpfile %f
+Exec=env WINEPREFIX="/home/james/.local/share/winevn" wine start /ProgIDOpen hlpfile %f
 NoDisplay=true
 StartupNotify=true
 Icon=C06E_winhlp32.0
