--- a/.lfrc
+++ b/.lfrc
@@ -21,7 +21,7 @@ set ifs "\n"
 set scrolloff 10
 set icons
 set period 1
-set hiddenfiles ".*:*.aux:*.log:*.bbl:*.bcf:*.blg:*.run.xml"
+set hiddenfiles ".*:*.aux:*.log:*.bbl:*.bcf:*.blg:*.run.xml:*.dxvk-cache"
 # set cleaner '~/.config/lf/cleaner'
 # set previewer '~/.config/lf/scope'
 set previewer ctpv
@@ -83,7 +83,8 @@ cmd moveto ${{
 	clear; tput cup $(($(tput lines)/3)); tput bold
 	set -f
 	clear; echo "Move to where?"
-	dest="$(sed -e 's/\s*#.*//' -e '/^$/d' -e 's/^\S*\s*//' ${XDG_CONFIG_HOME:-$HOME/.config}/shell/bm-dirs | fzfp | sed 's|~|$HOME|')" &&
+	# dest="$(sed -e 's/\s*#.*//' -e '/^$/d' -e 's/^\S*\s*//' ${XDG_CONFIG_HOME:-$HOME/.config}/shell/bm-dirs | fzf | sed 's|~|$HOME|')" &&
+	dest="$(fh)" &&
 	for x in $fx; do
 		eval mv -iv \"$x\" \"$dest\"
 	done &&
@@ -94,7 +95,8 @@ cmd copyto ${{
 	clear; tput cup $(($(tput lines)/3)); tput bold
 	set -f
 	clear; echo "Copy to where?"
-	dest="$(sed -e 's/\s*#.*//' -e '/^$/d' -e 's/^\S*\s*//' ${XDG_CONFIG_HOME:-$HOME/.config}/shell/bm-dirs | fzfp | sed 's|~|$HOME|')" &&
+	# dest="$(sed -e 's/\s*#.*//' -e '/^$/d' -e 's/^\S*\s*//' ${XDG_CONFIG_HOME:-$HOME/.config}/shell/bm-dirs | fzf | sed 's|~|$HOME|')" &&
+	dest="$(fh)" &&
 	for x in $fx; do
 		eval cp -ivr \"$x\" \"$dest\"
 	done &&
@@ -105,7 +107,7 @@ cmd convert2mov ${{
 	clear; tput cup $(($(tput lines)/3)); tput bold
 	set -f
 	printf "%s\n\t" "$fx"
-	printf "upscale?[y/N]"
+	printf "convert to mov?[y/N]"
 	read ans
 	[ $ans = "y" ] && st -e 2mov $fx &
 }}
@@ -114,7 +116,7 @@ cmd upscale4thumbnail ${{
 	clear; tput cup $(($(tput lines)/3)); tput bold
 	set -f
 	printf "%s\n\t" "$fx"
-	printf "convert to mov?[y/N]"
+	printf "upscale?[y/N]"
 	read ans
 	[ $ans = "y" ] && st -e res4thum $fx &
 }}
@@ -124,7 +126,7 @@ cmd bulkrename $vidir
 
 # Bindings
 map <c-f> $lf -remote "send $id select \"$(fzfp)\""
-map J $lf -remote "send $id cd $(sed -e 's/\s*#.*//' -e '/^$/d' -e 's/^\S*\s*//' ${XDG_CONFIG_HOME:-$HOME/.config}/shell/bm-dirs | fzfp)"
+# map J $lf -remote "send $id cd $(sed -e 's/\s*#.*//' -e '/^$/d' -e 's/^\S*\s*//' ${XDG_CONFIG_HOME:-$HOME/.config}/shell/bm-dirs | fzfp)"
 # map gh
 map g top
 map D delete
@@ -158,7 +160,8 @@ map Y $printf "%s" "$fx" | xclip -selection clipboard
 
 map m convert2mov
 map u upscale4thumbnail
-map c push :cd<space>
+map t push :cd<space>
+map c push :mv<space>
 
 # Source Bookmarks
 # source "~/.local/share/alias/aliases"
