--- a/.local/share/applications/wine-extension-chm.desktop
+++ b/.local/share/applications/wine-extension-chm.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Name=hh
 MimeType=application/vnd.ms-htmlhelp;
-Exec=env WINEPREFIX="/home/james/.local/share/jc141/wine/prefix" wine start /ProgIDOpen chm.file %f
+Exec=env WINEPREFIX="/home/james/.local/share/winevn" wine start /ProgIDOpen chm.file %f
 NoDisplay=true
 StartupNotify=true
 Icon=D15F_hh.0
