--- a/.local/share/applications/wine-extension-msp.desktop
+++ b/.local/share/applications/wine-extension-msp.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Name=Wine Installer
 MimeType=application/x-wine-extension-msp;
-Exec=env WINEPREFIX="/home/james/.local/share/jc141/wine/prefix" wine start /ProgIDOpen Msi.Patch %f
+Exec=env WINEPREFIX="/home/james/.local/share/winevn" wine start /ProgIDOpen Msi.Patch %f
 NoDisplay=true
 StartupNotify=true
 Icon=D23E_msiexec.0
