--- a/.local/share/applications/wine-extension-wri.desktop
+++ b/.local/share/applications/wine-extension-wri.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Name=wordpad
 MimeType=application/x-mswrite;
-Exec=env WINEPREFIX="/home/james/.local/share/jc141/wine/prefix" wine start /ProgIDOpen wrifile %f
+Exec=env WINEPREFIX="/home/james/.local/share/winevn" wine start /ProgIDOpen wrifile %f
 NoDisplay=true
 StartupNotify=true
 Icon=3365_wordpad.0
