--- a/.local/share/applications/wine-extension-xml.desktop
+++ b/.local/share/applications/wine-extension-xml.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Name=winebrowser
 MimeType=application/xml;
-Exec=env WINEPREFIX="/home/james/.cache/paru/clone/proton/src/build/pfx-wine64" wine start /ProgIDOpen xmlfile %f
+Exec=env WINEPREFIX="/home/james/.local/share/winevn" wine start /ProgIDOpen xmlfile %f
 NoDisplay=true
 StartupNotify=true
 Icon=81F5_winebrowser.0
